--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
-        android:text="최고의 플레이어 보여주기"
+        android:text="최고의 플레이어 보여주기."
         android:gravity="center" />
 
 </LinearLayout>
