--- a/app/src/main/res/layout/activity_no_fragment.xml
+++ b/app/src/main/res/layout/activity_no_fragment.xml
@@ -83,7 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:textColor="@color/white"
+            android:textColor="@color/yellow"
             android:layout_margin="10dip"
             android:textSize="20dp"
             android:id="@+id/textViewMyMean"
